--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
+    "antd": "^3.24.2",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
@@ -147,6 +148,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.6.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5"
+    "babel-plugin-import": "^1.12.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "react-app-rewired": "^2.1.3"
   }
 }
