--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
+    "ajax": "0.0.4",
     "antd": "^3.24.2",
+    "axios": "^0.19.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
@@ -73,6 +75,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://test.pod1.abssqr.cn:8039/am/",
   "browserslist": {
     "production": [
       ">0.2%",
