first页面和添加数据

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.7.2",
+    "qs": "^6.9.0",
     "react": "^16.10.2",
     "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.1.0",
@@ -75,7 +76,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://test.pod1.abssqr.cn:8039/am/",
+  "proxy": "http://dev.www.abssqr.cn",
   "browserslist": {
     "production": [
       ">0.2%",
